JAVA-30208: Changes made for adding spring-hibernate-5